# nonprofit-donor-scoring

./: .gitignore  .render.yaml  LICENSE  README.md  app.py  main.py  pyproject.toml  train_donor_model.py
.streamlit/: config.toml
data/raw/: donation_records.csv  donor_profiles.csv
data/synthetic/: synthetic_opportunities.csv
notebooks/: analysis.ipynb
notebooks/outputs/: donations_clean.csv
pages/: 0_Upload_and_Map.py  1_Donor_Propensity.py  2_Opportunity_Scoring.py
src/: run_pipeline.py
src/data_generation/: generate_opportunities.py
